spikes/shapes/shape-evidence/tests/ui/fail/forge.stderr
error[E0451]: fields `graph`, `index` and `marker` of struct `Value` are private
 --> tests/ui/fail/forge.rs:5:9
  |
4 |     let value = Value::<F32> {
  |                 ------------ in this type
5 |         graph: 1,
  |         ^^^^^ private field
6 |         index: 0,
  |         ^^^^^ private field
7 |         marker: std::marker::PhantomData,
  |         ^^^^^^ private field

error[E0451]: fields `value` and `evidence` of struct `ShapedValue` are private
  --> tests/ui/fail/forge.rs:10:9
   |
9  |     let _ = ShapedValue::<F32, Rank<2>> {
   |             --------------------------- in this type
10 |         value,
   |         ^^^^^ private field
11 |         evidence: std::marker::PhantomData,
   |         ^^^^^^^^ private field
